<resources>
    <string name="app_name">RA Playlist Maker</string>

    <string name="folder_text">(%1$d files)</string>
    <string name="total_size_text">%1$.2f mb</string>

    <string name="nothing_here">There is nothing here!</string>
    <string name="empty_folder">Empty Folder.</string>
    <string name="empty_systems">Empty Systems List.</string>
    <string name="folder_icon">Folder Icon</string>
    <string name="path_chevron">Path Chevron</string>

    <string name="empty_Playlist">Empty Playlist</string>
    <string name="label">Label</string>
    <string name="game_name_hint">Game Name</string>
    <string name="path">Path</string>
    <string name="core_path">Core Path</string>
    <string name="crc32">CRC32</string>
    <string name="database_name">Database Name</string>
    <string name="core_name">Core Name</string>
    <string name="auto_fill">Auto Fill</string>
    <string name="generate_crc32">Generate CRC32</string>
    <string name="done">Done</string>

    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
</resources>
