<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="entry"
            type="org.zornco.ra_playlist_maker.libretro.JsonClasses.RAPlaylistEntry" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".playlist.EntryEditorFragment">

        <TextView
            android:id="@+id/labelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/label"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/pathText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/path"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/labelText"
            app:layout_constraintTop_toBottomOf="@+id/labelEditText" />

        <TextView
            android:id="@+id/coreNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/core_name"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/pathEditText"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/pathText"
            app:layout_constraintTop_toBottomOf="@+id/pathEditText" />

        <TextView
            android:id="@+id/corePathText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/core_path"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/pathText"
            app:layout_constraintTop_toBottomOf="@+id/coreNameEditText" />

        <TextView
            android:id="@+id/crcText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/crc32"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/pathText"
            app:layout_constraintTop_toBottomOf="@+id/corePathEditText" />

        <TextView
            android:id="@+id/dbText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/database_name"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/pathText"
            app:layout_constraintTop_toBottomOf="@+id/crcEditText" />

        <EditText
            android:id="@+id/labelEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/game_name_hint"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@={entry.label}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/labelText"
            app:layout_constraintTop_toBottomOf="@+id/labelText" />

        <EditText
            android:id="@+id/pathEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/path"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@={entry.path}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/pathText"
            app:layout_constraintTop_toBottomOf="@+id/pathText" />

        <EditText
            android:id="@+id/coreNameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/core_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@={entry.core_name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/coreNameText"
            app:layout_constraintTop_toBottomOf="@+id/coreNameText" />

        <EditText
            android:id="@+id/corePathEditText"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/core_path"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@={entry.core_path}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/corePathText"
            app:layout_constraintTop_toBottomOf="@+id/corePathText" />

        <EditText
            android:id="@+id/crcEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/crc32"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@={entry.crc32}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/crcText"
            app:layout_constraintTop_toBottomOf="@+id/crcText" />

        <EditText
            android:id="@+id/dbEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/database_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@={entry.db_name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/dbText"
            app:layout_constraintTop_toBottomOf="@+id/dbText" />

        <Button
            android:id="@+id/autoFillButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/auto_fill"
            app:layout_constraintEnd_toStartOf="@+id/crcButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dbEditText" />

        <Button
            android:id="@+id/crcButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/generate_crc32"
            app:layout_constraintEnd_toStartOf="@+id/doneButton"
            app:layout_constraintStart_toEndOf="@+id/autoFillButton"
            app:layout_constraintTop_toTopOf="@+id/autoFillButton" />

        <Button
            android:id="@+id/doneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/crcButton"
            app:layout_constraintTop_toTopOf="@+id/autoFillButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>